Add bookmark functionality
A new content type to store articles, newsletters, and blog posts that I recently read and found worth sharing.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"format": "pnpm run format:code && pnpm run format:imports",
 		"format:code": "biome format . --write && prettier -w \"**/*\" \"!**/*.{md,mdx}\" --ignore-unknown --cache",
 		"format:imports": "biome check --formatter-enabled=false --write",
-		"check": "astro check"
+		"check": "astro check",
+		"create-bookmark": "node scripts/create-bookmark.js"
 	},
 	"dependencies": {
 		"@astrojs/markdown-remark": "^6.3.1",
@@ -49,6 +50,7 @@
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.4",
 		"autoprefixer": "^10.4.21",
+		"jsdom": "^23.2.0",
 		"pagefind": "^1.3.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-astro": "0.14.1",
