Attempt to fix commit permission error in add bookmark workflow

--- a/.github/workflows/add-bookmark.yml
+++ b/.github/workflows/add-bookmark.yml
@@ -16,6 +16,9 @@ jobs:
   add-bookmark:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     # Restrict workflow to specific users
     if: github.actor == 'anu-rock'
 
