--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"mdast-util-to-string": "^4.0.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
+		"rehype-mermaid": "^3.0.0",
 		"rehype-unwrap-images": "^1.0.0",
 		"remark-directive": "^4.0.0",
 		"satori": "0.12.2",
@@ -52,6 +53,7 @@
 		"autoprefixer": "^10.4.21",
 		"jsdom": "^23.2.0",
 		"pagefind": "^1.3.0",
+		"playwright": "^1.56.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-astro": "0.14.1",
 		"prettier-plugin-tailwindcss": "^0.6.11",
