--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "anurock.dev-v2",
 	"version": "1.0.0",
 	"scripts": {
+		"postinstall": "npx playwright install --with-deps chromium",
 		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
